--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <span class="skills-name">C</span>
                 <h3 class="skils-subtitle">Design</h3>
                 <span class="skills-name">CORELDRAW</span>
-                <span class="skills-name">CANVA</span>
+                <span class="skills-name">3D BLENDER</span>
                 <span class="skills-name">PHOTOSHOP</span>
                 <h3 class="skils-subtitle">Video Editing</h3>
                 <span class="skills-name">Adobe Premier Pro</span>
