--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
             </div>
         </section>
 
-        <section class="portfolio section" id="portfolio">
+  <section class="portfolio section" id="portfolio">
             <h2 class="section-title">Portfolio</h2>
 
             <div class="portfolio-container bd-grid">
                 <div class="portfolio-img">
                     <img src="work1.jpg" alt="work image">
-
+                    <h3 class="portfolio-title">Proyek IoT: Sistem Penyiraman Otomatis</h3>
+                    <p class="portfolio-description">Sistem ini menggunakan sensor kelembapan tanah untuk mengatur penyiraman tanaman secara otomatis, membantu petani menghemat waktu.</p>
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
                     </div>
@@ -116,7 +117,8 @@
 
                 <div class="portfolio-img">
                     <img src="work2.jpg" alt="work image">
-
+                    <h3 class="portfolio-title">Proyek IoT: Lampu Cerdas Berbasis Sensor</h3>
+                    <p class="portfolio-description">Lampu ini menyala otomatis saat mendeteksi gerakan, menggunakan mikrokontroler dan sensor PIR untuk efisiensi energi.</p>
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
                     </div>
@@ -124,13 +126,12 @@
 
                 <div class="portfolio-img">
                     <img src="work3.jpg" alt="work image">
-
+                    <h3 class="portfolio-title">Proyek IoT: Monitoring Suhu dan Kelembapan</h3>
+                    <p class="portfolio-description">Alat ini memantau suhu dan kelembapan ruangan secara real-time, dengan data ditampilkan melalui aplikasi web.</p>
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
                     </div>
                 </div>
-                </div>
-
             </div>
         </section>
 
