--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div class="about-container bd-grid">
                 <div class="about-img">
-                    <img src="profile.jpg" alt="John Doe image">
+                    <img src="profileeee.png" alt="John Doe image">
                 </div>
 
                 <div>
@@ -102,14 +102,14 @@
             </div>
         </section>
 
-  <section class="portfolio section" id="portfolio">
+        <section class="portfolio section" id="portfolio">
             <h2 class="section-title">Portfolio</h2>
 
             <div class="portfolio-container bd-grid">
                 <div class="portfolio-img">
                     <img src="work1.jpg" alt="work image">
-                    <h3 class="portfolio-title">Proyek IoT: Sistem Penyiraman Otomatis</h3>
-                    <p class="portfolio-description">Sistem ini menggunakan sensor kelembapan tanah untuk mengatur penyiraman tanaman secara otomatis, membantu petani menghemat waktu.</p>
+                    <h3 class="portfolio-title">Skripsi IoT: Distribusi Pakan dan Monitoring Suhu Kandang Ayam</h3>
+                    <p class="portfolio-description">Sistem ini menggunakan sensor kelembapan untuk mengatur secara otomatis dengan menggunakan lampu untuk memanaskan dan kipas untuk mendinginkan, lalu juga mengemplementasikan pakan dan minum otomatis pada kandang ayam.</p>
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
                     </div>
@@ -117,8 +117,8 @@
 
                 <div class="portfolio-img">
                     <img src="work2.jpg" alt="work image">
-                    <h3 class="portfolio-title">Proyek IoT: Lampu Cerdas Berbasis Sensor</h3>
-                    <p class="portfolio-description">Lampu ini menyala otomatis saat mendeteksi gerakan, menggunakan mikrokontroler dan sensor PIR untuk efisiensi energi.</p>
+                    <h3 class="portfolio-title">Proyek IoT: Lampu dan Gorden Otomatis Dengan Sensor Cahaya</h3>
+                    <p class="portfolio-description">Lampu akan menyala jika sensor tidak mendeteksi cahaya, lalu Gorden akan tertutup jika sensor tidak mendeteksi cahaya juga.</p>
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
                     </div>
